phase 12: Documentation Follow-up completed
Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>

Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079